# VoiceZettel

./: .eslintrc.json  .gitignore  .webui_secret_key  Dockerfile.frontend  GEMINI.md  README.md  docker-compose.yml  global.d.ts  next.config.ts  package-lock.json  package.json  requirements.txt  start-server.bat  start-silero-tts.bat  task.md  test_assistant.py  tsconfig.json  vitest.config.ts  voicezettel_v3_master_plan.md  ws-proxy.js
.agents/: AGENTS.md
.agents/skills/: build-llm-wiki-core.md  build-mission-control.md  build-offload-dashboard.md  build-safety-sandbox.md  build-semantic-crm.md  build-workspace-integration.md
.github/workflows/: ci.yml
.openclaw/: USER.md
__tests__/: health-endpoints.test.ts
__tests__/services/: health.test.ts
agents/: HEARTBEAT.md  SOUL.md  STYLE.md
data/: investor_kostya_context.md  investor_kostya_monthly.md
desktop-app/: main.js  package.json
desktop-app/src/: index.html
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: main.rs
docs/: ARCHITECTURE_ANTIGRAVITY.md  ARCHITECTURE_AUDIT.md  DOCUMENTATION.md  SELF-HOSTED.md  project_documentation.md
public/: manifest.json
public/worklets/: pcm16-processor.js
scripts/: VoiceZettel-Autostart.vbs  check_memories.py  migrate-json-to-sqlite.ts  restart-all.bat  setup-openclaw.sh  setup-vault.ps1  start-all.bat  start-with-tunnel.ps1  summarize_investor.py
services/api/: Dockerfile.api  main.py  requirements.txt  semantic_router.py
services/graph-rag/: requirements.txt  server.py
services/indexer/: Dockerfile  (+7 more)
src/: middleware.ts
(+269 files in other folders)
